# Icarus

./: .dockerignore.yaml  .env.docker.sample  .env.local.sample  .env.sample  .gitattributes  .gitignore  .gitmodules  .sqlxconfig  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Dockerfile  Icarus.csproj  Icarus.sln  Icarus.txt  LICENSE  Program.cs  README.md  Startup.cs  appsettings.Development.json  appsettings.json  authcredentials.json  conanfile.txt  database.cnf  database.json  docker-compose.yaml  dockerignore.yaml  manage.py  paths.json  requirements.txt  todos.txt
.github/workflows/: release.yaml  release.yml  v0.2.yml  workflow.yml
Authorization/: HasScopeRequirement.cs
Authorization/Handlers/: HasScopeHandler.cs
Certs/: Signing.cs
Constants/: DirectoryPaths.cs  FileExtensions.cs
Controllers/: AlbumController.cs  ArtistController.cs  GenreController.cs  LoginController.cs  RegisterController.cs  SongCompressedDataControllers.cs  SongController.cs  SongDataController.cs  SongStreamController.cs  ValuesController.cs  YearController.cs
Controllers/Managers/: AlbumManager.cs  ArtistManager.cs  BaseManagers.cs  CoverArtManager.cs  DirectoryManager.cs  GenreManager.cs  SongManager.cs  TokenManager.cs  YearManager.cs
Controllers/Utilities/: MetadataRetriever.cs  PasswordEncryption.cs  SongCompression.cs
Controllers/v1/: AlbumController.cs  ArtistController.cs  BaseController.cs  CoverArtController.cs  GenreController.cs  LoginController.cs  RegisterController.cs  SongCompressedDataControllers.cs  SongController.cs  SongDataController.cs  SongStreamController.cs  YearController.cs
Database/Contexts/: AlbumContext.cs  ArtistContext.cs  CoverArtContext.cs  GenreContext.cs  SongContext.cs  UserContext.cs  YearContext.cs
Database/Repositories/: AlbumRepository.cs  ArtistRepository.cs  BaseRepository.cs  CoverArtRepository.cs  GenreRepository.cs  SongRepository.cs  UserRepository.cs  YearRepository.cs
Exceptions/: InvalidCredentialsException.cs
Icarus/: .editconfig  Icarus.csproj  Program.cs  appsettings.Development.json  appsettings.json  nlog.config
Icarus/Authorization/: HasScopeRequirement.cs
Icarus/Types/: CoverArtTypes.cs
Libs/: CMakeLists.txt
Libs/include/: directory_manager.h  imageFile.h  metadata_retriever.h  models.h
Libs/src/: directory_manager.cpp  icarus.cpp  metadata_retriever.cpp
Models/: AccessLevel.cs  Album.cs  Artist.cs  BaseResult.cs  CoverArt.cs  CreateFile.cs  Genre.cs  LoginResult.cs  Models.csproj  MusicStoreContext.cs  RegisterResult.cs  Song.cs  SongData.cs  SongResult.cs  Token.cs  TokenReq.cs  User.cs  Year.cs
Models/Context/: AlbumContext.cs  AlbumStoreContext.cs  ArtistContext.cs  ArtistStoreContext.cs  BaseStoreContext.cs  GenreContext.cs  GenreStoreContext.cs  MusicStoreContext.cs  SongContext.cs  UserContext.cs  UserStoreContext.cs  YearContext.cs  YearStoreContext.cs
Models/Shared/: User.cs  UserCredentials.cs
Properties/: launchSettings.json
Repositories/: UserRepository.cs
Scripts/: convert_wav_to_flac.zsh
Scripts/MySQL/: create_database.sql  delete_all.sql  display_songs.sql  drop_and_create_database.sql  drop_database.sql
Services/: AuthenticationService.cs  TokenService.cs  UserService.sc.cs
Types/: CoverArtTypes.cs  DirectoryTypes.cs
api/: models.py  serializers.py  urls.py  views.py
icarus/: CMakeLists.txt  authcredentials.json  icarus.dox  icarus_keys.json  settings.py  urls.py  wsgi.py
icarus/include/callback/: StreamCallback.h
icarus/include/component/: AppComponent.hpp
icarus/include/controller/: AlbumController.hpp  ArtistController.hpp  BaseController.hpp  Controllers.h  CoverArtController.hpp  GenreController.hpp  LoginController.hpp  RegisterController.hpp  SongController.hpp  YearController.hpp
icarus/include/database/: AlbumRepository.h  ArtistRepository.h  BaseRepository.h  BaseRepository.hpp  CoverArtRepository.h  GenreRepository.h  Repositories.h  Repositories.hpp  SongRepository.h  TokenRepository.h  TokenRepository.hpp  TokenRepositry.hpp  UserRepository.h  UserRepository.hpp  YearRepository.h
icarus/include/dto/: CoverArtDto.hpp  GenreDto.hpp  LoginResultDto.hpp  SongDto.hpp
icarus/include/dto/conversion/: DtoConversions.h
icarus/include/manager/: AlbumManager.h  ArtistManager.h  BaseManager.hpp  CoverArtManager.h  DirectoryManager.h  GenreManager.h  Manager.h  SongManager.h  TokenManager.h  TokenManager.hpp  UserManager.h  UserManager.hpp  YearManager.h
icarus/include/model/: Models.h
icarus/include/type/: Filter.h  Scopes.h  SongFilter.h  YearFilter.h
icarus/include/utility/: General.hpp  ImageFile.h  MetadataRetriever.h  PasswordEncryption.h
icarus/include/verify/: Initialization.h  Initialization.hpp
icarus/src/: Main.cpp
icarus/src/database/: AlbumRepository.cpp  ArtistRepository.cpp  BaseRepository.cpp  CoverArtRepository.cpp  GenreRepository.cpp  SongRepository.cpp  TokenRepository.cpp  UserRepository.cpp  YearRepository.cpp
icarus/src/manager/: AlbumManager.cpp  ArtistManager.cpp  CoverArtManager.cpp  DirectoryManager.cpp  GenreManager.cpp  SongManager.cpp  TokenManager.cpp  UserManager.cpp  YearManager.cpp
icarus/src/utility/: MetadataRetriever.cpp  PasswordEncryption.cpp
icarus/src/verify/: Initialization.cpp
include/: imageFile.h  metadata_retriever.h  models.h  token_manager.h
include/callback/: StreamCallback.h
include/component/: AppComponent.hpp  appComponent.hpp
include/controller/: AlbumController.hpp  ArtistController.hpp  CoverArtController.hpp  GenreController.hpp  LoginController.hpp  RegisterController.hpp  SongController.hpp  YearController.hpp  loginController.hpp  songController.hpp
migrations/: 20250420185217_init_migration.sql
src/: Main.cpp  appComponent.hpp  auth.rs  environment.rs  imageFile.cpp  keys.rs  loginHandler.cpp  loginHandler.hpp  main.cpp  main.rs  metadata_retriever.cpp  token_manager.cpp
test_migrations/: 20250725172913_song_queue_processed_migration.sql  20250725213322_song_queue_processed.sql  20250725213944_init.sql  20250725214735_song_queue_processed.sql
tests/: CMakeLists.txt
(+166 files in other folders)
